change scss variable names

--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -9,7 +9,7 @@
   .background-text {
     position: absolute;
     font-size: 350px;
-    font-family: $font-family2;
+    font-family: $font-family-title;
     font-weight: 600;
     bottom: 0;
     right: 0;
