--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -10,7 +10,7 @@
 @import "./dark";
 
 body {
-  font-family: $font-family1;
+  font-family: $font-family-text;
   user-select: none;
   overflow: hidden;
 }
