--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,8 +2,8 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap");
 
-$font-family1: "Roboto", sans-serif;
-$font-family2: "Oswald", sans-serif;
+$font-family-text: "Roboto", sans-serif;
+$font-family-title: "Oswald", sans-serif;
 
 $white: #ffffff;
 $gray100: #fafafa;
